@@ -1,10 +1,11 @@
-2010-01-xx:
+2010-05-xx:
     * version 0.7.5
     * Replace SpotFAQs with a smaller CSS that complements the SpotFAQs skin
       on GameFAQs (SpotFAQs extras)
     * Link post number in quote headers to the quoted post
     * New CSS: GFPastel 2010
     * Fix highlighting group priority
+    * Fix stuff that broke when the urls changed
 
 2009-11-14:
     * version 0.7.4
